terraform/application/config/gateway-api/gateway-api-PoC-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: welcome-app-route
  namespace: infra
spec:
  parentRefs:
    - name: development-gateway-api
      namespace: gateway-api
      sectionName: websecure
  hostnames:
    - "ittapp-gatewayapi.cluster3.development.teacherservices.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: itt.development.svc.cluster.local
          port: 80
